# maty_server

./: CMakeLists.txt
data/db/: data.db
src/: client.cpp  client.h  common.cpp  common.h  database.cpp  database.h  dbnames.h  dispatcher.cpp  dispatcher.h  log.cpp  log.h  main.cpp  server.cpp  server.h  settings.cpp  settings.h
